crates/walrus-codegen/snapshots/int_less.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define {} @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret {} zeroinitializer
}

declare i32 @putchar(i32)

define i1 @main(i8* %main.env) {
main.entry:
  %x.alloca = alloca i32, align 4
  store i32 1, i32* %x.alloca, align 4
  %y.alloca = alloca i32, align 4
  store i32 1, i32* %y.alloca, align 4
  %x = load i32, i32* %x.alloca, align 4
  %y = load i32, i32* %y.alloca, align 4
  %0 = icmp slt i32 %x, %y
  ret i1 %0
}

