crates/walrus-codegen/snapshots/int_neg.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define i32 @main() {
main.entry:
  ret i32 -1
}

